--- a/package.json
+++ b/package.json
@@ -7,13 +7,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "brcypt": "^1.0.1",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "joi": "^17.6.0",
+    "express-csp-header": "^5.1.0",
     "json-server": "^0.17.0",
-    "jsonwebtoken": "^8.5.1",
     "node-fetch": "^3.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,7 +23,7 @@
     "build": "BROWSER=none react-scripts build",
     "test": "BROWSER=none react-scripts test",
     "eject": "BROWSER=none react-scripts eject",
-    "db": "json-server --watch server/data.json --port 8000",
+    "db": "json-server server/data.json --watch --port 8080",
     "server": "nodemon server/server.js"
   },
   "eslintConfig": {
@@ -48,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "dotenv": "^16.0.1",
     "nodemon": "^2.0.19"
   }
 }
